# ABAC_Sak

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_AWS.md  README.md  STAR_FEATURE_GUIDE.md  anonymize.sh  app.py  input_with_star_2.json  pyproject.toml  requirements.txt  tracking.py  wsgi.py.example
access_control/: README_template.txt  config.ini  config.py  gen.py  gen_rules.py  healthcare_generator.py  input.py  input.txt  log_generator.py  plot.py  plot_expected.py  policy_mining.py  readme.txt  rules.txt  university_generator.py
dataset/: correlated_input.json  input.json  input2.json  input3.json  input4.json  input5.json  input_with_Star2.json  input_with_star.json  new_input.json
deploy/: abac-app.service
handdrawn/: .gitignore  flow.py  process_zip.py
outputs/: error_summary.json  output.json  rules_temp.txt
static/: schema.json  style.css
templates/: index.html
tests/: test_correlation_config.py  test_star_integration.py
uploads/: input.json
